--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,34 @@
-* {
-  margin: 0;
-  padding: 0;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  box-sizing: border-box;
-}
 :root {
   --base-x: 10px;
   --base-y: 10px;
   font-size: 10px;
+  --font-family: "sans";
 }
+* {
+  margin: 0;
+  padding: 0;
+  font-family: var(--font-family);
+  box-sizing: border-box;
+}
+
 .app {
   width: 100vw;
   height: 100vh;
   background: #3296d7;
+}
+
+@media (max-width: 1440px) {
+  :root {
+    --base-x: 7px;
+    --base-y: 7px;
+    font-size: 7px;
+  }
+}
+
+@media (max-width: 1025px) {
+  :root {
+    --base-x: 5px;
+    --base-y: 5px;
+    font-size: 5px;
+  }
 }
